# nsdf-catalog

./: .gitignore  .gitmodules  Makefile  README.md  activate  compose.yml  docker-compose.yml  requirements.txt
ansible/: README.md  bringup.yml  deploy.yml  inventory.yml
ansible/roles/docker-compose/defaults/: main.yml
ansible/roles/docker-compose/handlers/: main.yml
ansible/roles/docker-compose/tasks/: certbot.yml  main.yml
ansible/roles/docker-compose/templates/: compose.yml.j2
docs/: bringup-jetstream2.md
docs/figures/: overview.drawio
notebooks/: Clickhouse_Single-Worker-HTTP.ipynb
src/backend/: requirements.txt
src/backend/src/: main.py
src/frontend/: Dockerfile  Makefile  package.json  quasar.config.js
src/frontend/src/boot/: axios.js
src/frontend/src/css/: quasar.variables.scss
src/frontend/src/layouts/: MainLayout.vue
src/python/nsdf-catalog/: .gitignore  setup.cfg
src/python/nsdf-crawler/: README.md  setup.cfg
src/python/nsdf-crawler/src/nsdf/crawler/: arecibo.py  aws_open_data.py  cyverse.py  dataverse.py  digital_rocks.py  dryad.py  material_commons.py  material_data_facility.py  neon.py  osn.py  slac.py  zenodo.py
src/python/nsdf-data-catalog/: setup.cfg
src/services/frontend/: Dockerfile  Makefile  README.md  package.json
src/services/index-clickhouse/: Dockerfile  Makefile  compose.yml
src/services/nginx/: .gitignore  Dockerfile  README.md  app.conf  compose.yml  config.env  init-letsencrypt.sh
src/services/rest_endpoint/: Dockerfile  Makefile  README.md  compose.yml  requirements.txt
(+27 files in other folders)
