[metadata]
name = nsdf-crawler
version = 0.0.1
description = NSDF Data Catalog Crawler Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nsdf-fabric/nsdf-catalog
project_urls =
    Bug Tracker = https://github.com/nsdf-fabric/nsdf-catalog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

install_requires =
  materials-commons-api
  mdf_forge
  boto3
  awscli 
  imageio 
  bs4 
  Selenium 
  beautifulsoup4 
  ratelimit
  zenodopy

[options.packages.find]
where = src
