[metadata]
name = nsdf-data-catalog
version = 0.0.1
author = Jakob Luettgau, Giorgio Scorzelli
author_email = jluettga@utk.edu
description = NSDF Data Catalog Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nsdf-fabric/nsdf-data-catalog
project_urls =
    Bug Tracker = https://github.com/nsdf-fabric/nsdf-data-catalog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
